<resources>
    <string name="app_name">EnderFilmes</string>
    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
    <color name="selected_color">#0a565e</color>
    <color name="unselected_color">#000000</color>
    <color name="info">#115E7A</color>
    <string name="title_activity_test" translatable="false">testActivity</string>
    <string name="title_activity_testactivity" translatable="false">testactivity</string>
    <string name="buscar">Buscar</string>
    <string name="categorias">Categorias</string>
    <string name="sobre">Sobre</string>
    <string name="sobre_msg" translatable="false">EnderFilmes\nAplicativo do site https://ender.tk\nNovos Filmes são exibidos no início da lista\n@JonasXPX Build </string>
    <string name="title_activity_series" translatable="false">Series</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings" translatable="false">Settings</string>
    <string name="series" translatable="false">Séries</string>
    <string name="buscar_at">Buscar atualização</string>
    <string name="update_title">Atualização</string>
    <string name="update_ok">Atualizar</string>
    <string name="alread_update">Seu Aplicativo já está atualizado.</string>
    <string name="check_update">Checando...</string>
    <string name="new_update_found">Uma nova versão foi encontrada:</string>

    <string name="font_family_light" translatable="false">sans-serif-light</string>
    <string name="font_family_medium" translatable="false">sans-serif-medium</string>
    <string name="font_family_regular" translatable="false">sans-serif</string>
    <string name="font_family_condensed" translatable="false">sans-serif-condensed</string>
    <string name="font_family_black" translatable="false">sans-serif-black</string>
    <string name="font_family_thin" translatable="false">sans-serif-thin</string>
    <string name="selection_disabled" translatable="false">Disabled</string>
    <string name="selection_default" translatable="false">Default</string>
    <string name="enable_random_adaptation" translatable="false">Enable random adaptation</string>
    <string name="loading">Carregando</string>
    <string name="foregroudcolor" translatable="false">foregroudcolor</string>
    <string name="settings">Configurações</string>
    <string name="desc_font_size">Dependendo do tamanho da sua tela, o tamanho da fonte pode variar.</string>
    <string name="movie_link" translatable="false">https://ender.tk/filme/data.php?getmovies=1</string>
    <string name="tv_link" translatable="false">https://ender.tk/filme/data.php?getonlinetv=1</string>
    <string name="series_link" translatable="false">https://ender.tk/filme/data.php?getseries=1</string>
    <string name="ad_unit_id" translatable="false">ca-app-pub-6681846718813637/7457083506</string>
    <string name="media_route_menu_title" translatable="false">Play on&#8230;</string>
    <string name="ok" translatable="false">okay</string>
    <string name="error">Erro!</string>
    <string name="oops" translatable="false">Oops</string>
    <string name="queue_item_added_to_play_next" translatable="false">queue_item_added_to_play_next</string>
    <string name="queue_item_added_to_queue" translatable="false">queue_item_added_to_queue</string>
    <string name="video_error_media_load_timeout" translatable="false">video_error_media_load_timeout</string>
    <string name="video_error_server_unaccessible" translatable="false">video_error_server_unaccessible</string>
    <string name="video_error_unknown_error" translatable="false">video_error_unknown_error</string>
    <string name="vp_desc" translatable="false">description</string>
    <string name="transition_image" translatable="false">transition_image</string>
    <string name="filmes">Filmes</string>
    <string name="version">Versão: 1.6.3</string>
    <string name="pedido_enviar">Enviar</string>
    <string name="observa_es_opcional">Observações (Opcional)</string>
    <string name="seu_e_mail_opcional">Seu e-mail (Opcional)</string>
    <string name="refer_ncia_opcional">Referência (Opcional)</string>
    <string name="nome_do_filme_ou_s_rie">Nome do filme ou série</string>
    <string name="fa_a_um_pedido">Faça um pedido</string>
</resources>
